--- a/emacs.org
+++ b/emacs.org
@@ -1832,23 +1832,30 @@ org-babel languages & automatic yasnippet creation
 (add-to-list 'org-src-lang-modes '("elisp" . emacs-lisp))
 (org-babel-src-yasnippet 'elisp 'emacs-lisp)
 
-;; org-babel-execute:bash/cpp/C++ exists and there is no ob-bash file, only need the yasnippet
+;; org-babel-execute:* already exists or there is no explicit ob-*.el file, only need the yasnippet
 (org-babel-src-yasnippet 'bash)
 (org-babel-src-yasnippet 'cpp)
 (org-babel-src-yasnippet 'C++)
 
-;; yasnippets for modes that don't need an org-babel-execute function
-(org-babel-src-yasnippet 'markdown)
-(org-babel-src-yasnippet 'gfm)
-(org-babel-src-yasnippet 'conf)
-(org-babel-src-yasnippet 'text)
-(org-babel-src-yasnippet 'yaml)
+;; alias yasnippets to other ob-* blocks
 (org-babel-src-yasnippet 'json 'js)
 (org-babel-src-yasnippet 'javascript 'js)
 (org-babel-src-yasnippet 'nodejs 'js)
-(org-babel-src-yasnippet 'html)
-(org-babel-src-yasnippet 'xml)
 (org-babel-src-yasnippet 'http 'verb)
+
+;; ob/yasnippets for modes that don't need an org-babel-execute function, just give them a dummy execute function that returns the body
+(defun org-babel-format-lang (ob-lang &optional ob-src-header-override)
+  (org-babel-src-yasnippet ob-lang ob-src-header-override)
+  (fset (intern (format "org-babel-execute:%s" (or ob-src-header-override ob-lang)))
+        `(lambda (body params) (interactive) body)))
+
+(org-babel-format-lang 'markdown)
+(org-babel-format-lang 'gfm)
+(org-babel-format-lang 'conf)
+(org-babel-format-lang 'text)
+(org-babel-format-lang 'yaml)
+(org-babel-format-lang 'html)
+(org-babel-format-lang 'xml)
 
 (setq org-babel-default-header-args:sh '((:results . "output"))
       org-babel-default-header-args:shell '((:results . "output"))
