--- a/emacs.org
+++ b/emacs.org
@@ -137,8 +137,15 @@ Now, start emacs.
 (use-package groovy-mode)
 (add-to-list 'auto-mode-alist '("Jenkinsfile$" . groovy-mode))
 
+(use-package glsl-mode)
+(add-to-list 'auto-mode-alist '("\\.vert$" . glsl-mode))
+(add-to-list 'auto-mode-alist '("\\.frag$" . glsl-mode))
+(add-to-list 'auto-mode-alist '("\\.vs$" . glsl-mode))
+(add-to-list 'auto-mode-alist '("\\.fs$" . glsl-mode))
+
 (use-package jsonnet-mode)
 (add-to-list 'auto-mode-alist '("\\.libsonnet\\'" . jsonnet-mode))
+
 #+END_SRC
 
 * helper functions
