--- a/emacs.org
+++ b/emacs.org
@@ -22,6 +22,9 @@ Now, start emacs.
 * packages
 
 #+BEGIN_SRC emacs-lisp
+(require 'use-package)
+(setq use-package-always-ensure t)
+
 (use-package gnu-elpa-keyring-update)
 
 (use-package xterm-color)
