--- a/emacs.org
+++ b/emacs.org
@@ -22,6 +22,12 @@ Now, start emacs.
 * packages
 
 #+BEGIN_SRC emacs-lisp
+(require 'package)
+(add-to-list 'package-archives '("melpa" . "https://melpa.org/packages/") t)
+(add-to-list 'package-archives '("melpa-stable" . "https://stable.melpa.org/packages/") t)
+(package-initialize)
+(unless (file-exists-p package-user-dir) (package-refresh-contents))
+
 (require 'use-package)
 (setq use-package-always-ensure t)
 
