--- a/emacs.org
+++ b/emacs.org
@@ -667,7 +667,7 @@ theme
 * settings
 
 #+BEGIN_SRC emacs-lisp
-(add-hook 'focus-out-hook 'garbage-collect)
+(add-function :after after-focus-change-function (lambda () (unless (frame-focus-state) (garbage-collect))))
 
 (setq custom-file (expand-file-name "custom.el" user-emacs-directory))
 (load custom-file 'noerror)
