--- a/emacs.org
+++ b/emacs.org
@@ -1779,7 +1779,8 @@ eshell prompt
 (add-hook 'org-babel-after-execute-hook 'org-display-inline-images)
 
 (define-key jw-keymap (kbd "o") 'jw-todo-or-catpure)
-(define-key jw-keymap (kbd "a") 'org-agenda)
+(define-key jw-keymap (kbd "a") 'org-agenda-list)
+(define-key jw-keymap (kbd "A") 'org-agenda)
 (define-key ctl-x-4-map (kbd "'") 'jw-toggle-org-src-window-setup)
 (add-hook 'org-mode-hook (lambda ()
                            (local-set-key (kbd "C-c r") 'org-reveal)
