add back rcirc functions

--- a/emacs.org
+++ b/emacs.org
@@ -594,6 +594,18 @@ theme
    `(transient-purple ((,class (:foreground ,magenta))))
    `(transient-pink ((,class (:foreground ,orange))))
 
+   `(rcirc-my-nick ((,class (:foreground "#00ffff"))))
+   `(rcirc-other-nick ((,class (:foreground "#90ee90"))))
+   `(rcirc-server ((,class (:foreground "#a2b5cd"))))
+   `(rcirc-server-prefix ((,class (:foreground "#00bfff"))))
+   `(rcirc-timestamp ((,class (:foreground "#7d7d7d"))))
+   `(rcirc-nick-in-message ((,class (:foreground "#00ffff"))))
+   `(rcirc-prompt ((,class (:foreground "#00bfff"))))
+   `(rcirc-keyword ((,class :foreground "#00ffff")))
+   `(rcirc-nick-in-message-full-line ((,class ())))
+   `(rcirc-track-nick ((,class (:foreground "#00ffff"))))
+   `(rcirc-track-keyword ((,class (:foreground "#00ffff"))))
+
    `(erc-direct-msg-face ((,class (:foreground ,orange))))
    `(erc-error-face ((,class (:foreground ,red))))
    `(erc-header-face ((,class (:foreground ,foreground :background ,selection))))
@@ -871,22 +883,6 @@ theme
 (setq undo-tree-auto-save-history nil) ;; saving the undo-tree acts weird on startup, don't use it.
 
 (setq kill-ring-max 1000)
-
-(require 'rcirc)
-(require 'erc)
-(setq erc-header-line-format nil
-      erc-hide-list '("JOIN" "PART" "QUIT"))
-
-(setq erc-prompt (lambda () (concat (buffer-name) " >")))
-
-;; make rcirc & erc buffers span width of window
-(defun irc-hook--span-window-width ()
-  (setq rcirc-fill-column (- (window-width) 2))
-  (setq erc-fill-column (- (window-width) 2)))
-(add-hook 'window-configuration-change-hook 'irc-hook--span-window-width)
-
-;; erc: stop from scrolling too far up on new messages, and keep the cursor at the bottom of the buffer.
-(add-to-list 'erc-mode-hook (lambda () (set (make-local-variable 'scroll-conservatively) 100)))
 
 (when (eq system-type 'gnu/linux)
   (setq interprogram-paste-function 'x-cut-buffer-or-selection-value
@@ -1694,6 +1690,68 @@ eshell prompt
 (define-key jw-magit-map (kbd "f") 'magit-file-dispatch)
 (define-key jw-magit-map (kbd "M-w") 'browse-at-remote)
 
+#+END_SRC
+
+* irc
+
+#+BEGIN_SRC emacs-lisp
+(require 'rcirc)
+(require 'erc)
+
+(defun rcirc-connect-dwim (&optional server port nick user-name full-name startup-channels password encryption)
+  "Alternative to `rcirc-connect'.
+If the server is not connected, then connect to it.
+If no server is provided, then a prompt will ask the user for a server.
+If the server is connected, then toggle to it's process buffer.
+If the server is connected and a prefix arg is provided, then invoke a quick /msg on the server and toggle back to the other-buffer."
+  (interactive)
+  (if server
+      (let ((existing-sp (get-process server)))
+        (if (process-live-p existing-sp)
+            (if current-prefix-arg
+                (save-window-excursion
+                  (switch-to-buffer (process-buffer existing-sp))
+                  (call-interactively 'rcirc-cmd-msg))
+              (switch-to-buffer (process-buffer existing-sp)))
+          (let* ((proc (rcirc-connect server port nick user-name full-name startup-channels password encryption))
+                 (buffer (process-buffer proc)))
+            (switch-to-buffer buffer))))
+    (rcirc t)))
+
+(setq rcirc-buffer-maximum-lines 2000)
+
+(add-to-list 'rcirc-omit-responses "MODE")
+
+(defun rcirc-hook--initial-config ()
+  (jw--save-current-message
+    (rcirc-track-minor-mode t)
+    (rcirc-omit-mode)
+    (cd (getenv "HOME"))))
+
+(add-hook 'rcirc-mode-hook 'rcirc-hook--initial-config)
+
+;; make rcirc & erc buffers span width of window
+(defun irc-hook--span-window-width ()
+  (setq rcirc-fill-column (- (window-width) 2))
+  (setq erc-fill-column (- (window-width) 2)))
+
+(add-hook 'window-configuration-change-hook 'irc-hook--span-window-width)
+
+(defun rcirc-handler-NOTICE--advice--ignore-KEEPALIVE (original-function &rest args)
+  (let* ((function-args (nth 2 args))
+         (msg (cadr function-args)))
+    (unless (string-match "keepalive" msg)
+      (apply original-function args))))
+
+(advice-add 'rcirc-handler-NOTICE :around 'rcirc-handler-NOTICE--advice--ignore-KEEPALIVE)
+
+(setq erc-header-line-format nil
+      erc-hide-list '("JOIN" "PART" "QUIT"))
+
+(setq erc-prompt (lambda () (concat (buffer-name) " >")))
+
+;; erc: stop from scrolling too far up on new messages, and keep the cursor at the bottom of the buffer.
+(add-to-list 'erc-mode-hook (lambda () (set (make-local-variable 'scroll-conservatively) 100)))
 #+END_SRC
 
 * org
